# amfoss-tasks01

./: Interospection  README.md
insrospection/: README.MD
task-02/TerminalHunt/solution/: part1.txt
task-03/: Deadshot.py  Hero_to_Zero.py  Monsterslayer.py  fastestwaytocastespell.py  journeytojotunheim.py  losing-streak.py  money-trouble.py  shriktowin.py  theworstdaytomissschool.py  water-tank-blues.py
task-04/: bot.py  info.csv  mov_info
task-05/Client/: Program.cs
task-05/Server/: Program.cs
task-06/flame_bunny/: README.md  pubspec.yaml
task-06/flame_bunny/android/app/: build.gradle
task-06/flame_bunny/android/app/src/debug/: AndroidManifest.xml
task-06/flame_bunny/android/app/src/main/: AndroidManifest.xml
task-06/flame_bunny/android/app/src/main/kotlin/com/example/flame_bunny/: MainActivity.kt
task-06/flame_bunny/lib/: main.dart
task-06/flame_bunny/linux/: CMakeLists.txt  my_application.cc
task-08/: index.html
task-09/web_scraper/: Cargo.toml
task-09/web_scraper/src/: crypto_data.csv  main.rs
task-10/pset 0/: Scratch Project.sb3
task-10/pset 1/: mario.c
task-10/pset 2/: bulbs.c
task-10/pset 3/: tideman.c
task-10/pset 4/: reverse.c
task-13/: readme.txt
task-14/: pass.txt
task-15/: project euler_01.py  project euler_02.py  project euler_03.py  project euler_04.py  project euler_05.py
