[package]
name = "web_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1.6"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.13.0"
select = "0.6.0"
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
webdriver = "0.43.0"
serde_json = "1.0.68"
selenium_webdriver = "0.1.7"

